# flask_optional_routes

./: .gitignore  README.md  __init__.py  example.py  optional_routes.py  route_branch_manager.py  setup.cfg
optional_routes/: optional_routes.py  route_branch_manager.py
src/optional_routes/: __init__.py  route_branch.py
tests/: __init__.py  route_branch_manager_tests.py  test_cases.py
