[metadata]
name = flask_optional_routes
version = 1.4
author = Herbert Dawkins
description = This package allows you to specify optional routes in a url path
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudouser2010/flask_optional_routes
project_urls =
    Bug Tracker = https://github.com/sudouser2010/flask_optional_routes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src